CSS added all global colors to elements on the page note check out word spacing between click here and to contact us section two below and click here and question mark - to be solved INDEX changed href link to . as it was constantly going to 404

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ button {
 }
 
 h2{
-    padding: 20px 100px 5px 100px;
+    padding: 20px 100px 20px 100px;
 }
 
 .contact-text-link {
@@ -111,7 +111,7 @@ h2{
     font-family: var(--main-text-font-family);
     font-size: 1px;
     color: #000000;
-    padding-top: 100px;
+    padding-top: 150px;
 
 }
 
